--- a/etc/nginx.conf.in
+++ b/etc/nginx.conf.in
@@ -16,6 +16,6 @@ server {
 
     location / {
         include /etc/nginx/uwsgi_params;
-        uwsgi_pass unix:${uwsgi_socket};
+        uwsgi_pass unix:${SOCKET};
     }
 }
