Move run to var/run

--- a/etc/uwsgi.ini.in
+++ b/etc/uwsgi.ini.in
@@ -5,8 +5,8 @@ home         = ${ROOT}/usr
 pythonpath   = ${ROOT}
 module       = project.wsgi
 daemonize    = ${ROOT}/var/uwsgi.log
-pidfile      = ${ROOT}/run/uwsgi.pid
-socket       = ${ROOT}/run/uwsgi.socket
+pidfile      = ${PIDFILE}
+socket       = ${SOCKET}
 chown-socket = ${USER}:${GROUP}
 chmod-socket = 664
 vacuum       = True
