--- a/etc/monit.conf.in
+++ b/etc/monit.conf.in
@@ -4,4 +4,6 @@ check process ${NAME} with pidfile ${PIDFILE}
    stop  program = "/usr/bin/uwsgi --stop ${PIDFILE}
                    as uid ${USER} and gid ${GROUP}
    if failed unixsocket ${SOCKET} type TCP then restart
+   if failed port 80 protocol http request "/ping" status = 200
+      hostheader "${DOMAIN}" then restart
    if 5 restarts within 5 cycles then timeout
