monit: fix typo

--- a/etc/monit.conf.in
+++ b/etc/monit.conf.in
@@ -1,7 +1,7 @@
 check process ${NAME} with pidfile ${PIDFILE}
    start program = "/usr/bin/uwsgi ${ROOT}/etc/uwsgi.ini"
                    as uid ${USER} and gid ${GROUP}
-   stop  program = "/usr/bin/uwsgi --stop ${PIDFILE}
+   stop  program = "/usr/bin/uwsgi --stop ${PIDFILE}"
                    as uid ${USER} and gid ${GROUP}
    if failed unixsocket ${SOCKET} type TCP then restart
    if failed port 80 protocol http request "/ping" status = 200
