Reorganize var/ a little bit

--- a/etc/uwsgi.ini.in
+++ b/etc/uwsgi.ini.in
@@ -4,7 +4,7 @@ chdir        = ${ROOT}
 home         = ${ROOT}/usr
 pythonpath   = ${ROOT}
 module       = project.wsgi
-daemonize    = ${ROOT}/var/uwsgi.log
+daemonize    = ${ROOT}/var/log/uwsgi.log
 pidfile      = ${PIDFILE}
 socket       = ${SOCKET}
 chown-socket = ${USER}:${GROUP}
