uwsgi: enable master and set processes to 2

--- a/etc/uwsgi.ini.in
+++ b/etc/uwsgi.ini.in
@@ -12,5 +12,5 @@ chmod-socket = 664
 vacuum       = True
 env          = DJANGO_SETTINGS_MODULE=project.settings.${TARGET}
 
-#master       = true
-#processes    = 1
+master       = true
+processes    = 2
