Moving more stuff to boot/

--- a/etc/uwsgi.ini.in
+++ b/etc/uwsgi.ini.in
@@ -3,7 +3,7 @@ plugins      = python34
 chdir        = ${ROOT}
 home         = ${ROOT}/usr
 pythonpath   = ${ROOT}
-module       = project.wsgi
+module       = boot.wsgi
 daemonize    = ${ROOT}/var/log/uwsgi.log
 pidfile      = ${PIDFILE}
 socket       = ${SOCKET}
