Move boot/ansible/ to ansible/
And make settings a template (will be needed for allowed hosts, etc.)

--- a/ansible/tasks/settings.yml
+++ b/ansible/tasks/settings.yml
@@ -7,6 +7,6 @@
 #
 
 - name: "Copy settings file"
-  copy:
+  template:
     src: "files/settings.{{ target }}.py"
     dest: "{{ root }}/project/local_settings.py"
