--- a/ansible/roles/django/templates/nginx.conf
+++ b/ansible/roles/django/templates/nginx.conf
@@ -1,22 +1,22 @@
 server {
     listen 80;
-    server_name {{ domain }};
+    server_name {{ django_domain }};
     charset utf-8;
 
     error_log /var/log/nginx/{{ name }}_error_log;
     access_log /var/log/nginx/{{ name }}_access_log;
 
     location /media {
-        alias {{ root }}/var/media;
+        alias {{ dir_var }}/media;
     }
 
     location /static {
-        alias {{ root }}/var/static;
+        alias {{ dir_var }}/static;
     }
 
     location / {
         client_max_body_size 10m;
         include /etc/nginx/uwsgi_params;
-        uwsgi_pass unix:{{ sock }};
+        uwsgi_pass unix:{{ file_sock }};
     }
 }
