--- a/ansible/development.yml
+++ b/ansible/development.yml
@@ -1,7 +1,14 @@
+#
+# See roles/django/defaults/main.yml for the available options
+#
+
 - name: "Development"
   hosts: "development"
-
   roles:
-  - role: "django"
-    target: "development"
-#   django_domain: "staging.example.com"
+  - role              : "django"
+    django_database   : "sqlite"
+    django_debug      : true
+    django_domain     : "{{ ansible_default_ipv4.address }}.xip.io"
+    django_with_nginx : false
+    django_with_monit : false
+    django_with_sudo  : false
