--- a/ansible/roles/django/tasks/settings.yml
+++ b/ansible/roles/django/tasks/settings.yml
@@ -1,7 +1,7 @@
 #
 # Setup settings
 #
-# Input : root, target
+# Input : dir_root, target
 # Output:
 # Requires:
 #
@@ -9,4 +9,4 @@
 - name: "Copy settings file"
   template:
     src: "settings.py"
-    dest: "{{ root }}/project/local_settings.py"
+    dest: "{{ dir_root }}/project/local_settings.py"
