--- a/ansible/roles/django/defaults/main.yml
+++ b/ansible/roles/django/defaults/main.yml
@@ -1,6 +1,7 @@
 django_database   : "sqlite"
 django_debug      : true
 django_domain     : "{{ ansible_default_ipv4.address }}.xip.io"
+django_pull       : false
 django_with_nginx : false
 django_with_monit : false
 django_with_sudo  : false
