--- a/ansible/roles/django/templates/uwsgi.ini
+++ b/ansible/roles/django/templates/uwsgi.ini
@@ -3,7 +3,7 @@ plugins      = python34
 chdir        = {{ dir_root }}
 home         = {{ dir_venv }}
 pythonpath   = {{ dir_root }}
-module       = boot.wsgi
+module       = ansible.wsgi
 pidfile      = {{ file_pid }}
 vacuum       = True
 env          = DJANGO_SETTINGS_MODULE=project.settings
