--- a/ansible/roles/django/templates/uwsgi.ini
+++ b/ansible/roles/django/templates/uwsgi.ini
@@ -1,5 +1,5 @@
 [uwsgi]
-plugins      = python34
+plugins      = python{{ python_version|regex_replace('\.', '') }}
 chdir        = {{ dir_root }}
 home         = {{ dir_venv }}
 pythonpath   = {{ dir_root }}
