--- a/ansible/vars.yml
+++ b/ansible/vars.yml
@@ -1,6 +1,1 @@
-domain: "{{ ansible_default_ipv4.address }}.xip.io"
-user  : "{{ ansible_user_id }}"
-group : "{% if ansible_os_family == 'Debian' %}www-data{% else %}nginx{% endif %}"
-prefix: "{{ hostvars[inventory_hostname].prefix }}"
-target: "{{ hostvars[inventory_hostname].target }}"
-cwd   : "{{ playbook_dir|dirname }}"
+python_version: "3.4"
