--- a/ansible/roles/django/tasks/venv.yml
+++ b/ansible/roles/django/tasks/venv.yml
@@ -17,7 +17,7 @@
 
 # Internal variables
 - name: "Find out path to Python binary"
-  command: "which python3"
+  command: "which python{{ python_version }}"
   register: "python"
   changed_when: false
 - set_fact:
