--- a/ansible/roles/django/templates/uwsgi.ini
+++ b/ansible/roles/django/templates/uwsgi.ini
@@ -6,7 +6,7 @@ pythonpath   = {{ dir_root }}
 module       = ansible.wsgi
 pidfile      = {{ file_pid }}
 vacuum       = True
-env          = DJANGO_SETTINGS_MODULE=project.settings
+env          = DJANGO_SETTINGS_MODULE={{ settings }}
 
 master       = true
 master-fifo  = {{ file_fifo }}
