Secret key with ansible

--- a/ansible/roles/django/tasks/settings.yml
+++ b/ansible/roles/django/tasks/settings.yml
@@ -9,6 +9,7 @@
 - set_fact:
     settings: "project.local_settings"
     settings_file: "{{ dir_root }}/project/local_settings.py"
+    secret_key: "{{ lookup('password', dir_var + '/secret.txt length=50') }}"
 
 - name: "Copy settings file"
   template:
