--- a/ansible/roles/django/tasks/static.yml
+++ b/ansible/roles/django/tasks/static.yml
@@ -2,5 +2,5 @@
   django_manage:
     virtualenv: "{{ dir_venv }}"
     app_path: "{{ dir_root }}"
-    settings: "project.settings"
+    settings: "{{ settings }}"
     command: "collectstatic"
