--- a/ansible/roles/django/tasks/init.yml
+++ b/ansible/roles/django/tasks/init.yml
@@ -24,10 +24,12 @@
 #
 
 - set_fact:
-    dir_var: "{{ dir_root }}/var"
-    dir_run: "{{ dir_root }}/var/run"
-    dir_etc: "{{ dir_root }}/var/etc"
-    dir_log: "{{ dir_root }}/var/log"
+    dir_var   : "{{ dir_root }}/var"
+    dir_run   : "{{ dir_root }}/var/run"
+    dir_etc   : "{{ dir_root }}/var/etc"
+    dir_log   : "{{ dir_root }}/var/log"
+    dir_static: "{{ dir_root }}/var/static"
+    dir_media : "{{ dir_root }}/var/media"
 
 - name: "Create directories"
   file:
@@ -38,6 +40,8 @@
   - "{{ dir_run }}"
   - "{{ dir_etc }}"
   - "{{ dir_log }}"
+  - "{{ dir_static }}"
+  - "{{ dir_media }}"
 
 #
 # Variables
