Remote deploying (wip)

--- a/ansible/development.yml
+++ b/ansible/development.yml
@@ -15,3 +15,6 @@
     django_with_nginx : false
     django_with_monit : false
     django_with_sudo  : false
+
+    django_root       : ""
+    django_name       : ""
