--- a/ansible/roles/django/tasks/manage.yml
+++ b/ansible/roles/django/tasks/manage.yml
@@ -1,5 +1,5 @@
 - name: "Generate manage.py"
   template:
     src: "manage.py"
-    dest: "{{ dir_root }}/manage.py"
+    dest: "{{ django_root }}/manage.py"
     mode: "u+x"
