--- a/ansible/roles/django/templates/uwsgi.ini
+++ b/ansible/roles/django/templates/uwsgi.ini
@@ -1,8 +1,8 @@
 [uwsgi]
 plugins      = python{{ python_version|regex_replace('\.', '') }}
-chdir        = {{ dir_root }}
+chdir        = {{ django_root }}
 home         = {{ dir_venv }}
-pythonpath   = {{ dir_root }}
+pythonpath   = {{ django_root }}
 module       = ansible.wsgi
 pidfile      = {{ file_pid }}
 vacuum       = True
