--- a/ansible/roles/django/tasks/static.yml
+++ b/ansible/roles/django/tasks/static.yml
@@ -1,6 +1,6 @@
 - name: "Collect static"
   django_manage:
     virtualenv: "{{ dir_venv }}"
-    app_path: "{{ dir_root }}"
+    app_path: "{{ django_root }}"
     settings: "{{ settings }}"
     command: "collectstatic"
