--- a/ansible/roles/django/templates/monit.conf
+++ b/ansible/roles/django/templates/monit.conf
@@ -1,4 +1,4 @@
-check process {{ name }} with pidfile {{ file_pid }}
+check process {{ django_name }} with pidfile {{ file_pid }}
    start program = "/usr/bin/uwsgi {{ dir_etc }}/uwsgi.ini"
                    as uid {{ user }} and gid {{ group }}
    stop  program = "/usr/bin/uwsgi --stop {{ file_pid }}"
