--- a/ansible/roles/django/templates/nginx.conf
+++ b/ansible/roles/django/templates/nginx.conf
@@ -3,15 +3,15 @@ server {
     server_name {{ django_domain }};
     charset utf-8;
 
-    error_log /var/log/nginx/{{ name }}_error_log;
-    access_log /var/log/nginx/{{ name }}_access_log;
+    error_log /var/log/nginx/{{ django_name }}_error_log;
+    access_log /var/log/nginx/{{ django_name }}_access_log;
 
-    location /media {
-        alias {{ dir_var }}/media;
+    location {{ media_url }} {
+        alias {{ dir_media }}/;
     }
 
-    location /static {
-        alias {{ dir_var }}/static;
+    location {{ static_url }} {
+        alias {{ dir_static }}/;
     }
 
     location / {
