--- a/ansible/roles/django/tasks/name.yml
+++ b/ansible/roles/django/tasks/name.yml
@@ -6,5 +6,7 @@
 # Requires:
 #
 
-- set_fact:
+- name: "Set instance name"
+  set_fact:
     django_name: "{{ django_root|basename }}"
+  when: "django_name == ''"
