--- a/ansible/roles/django/defaults/main.yml
+++ b/ansible/roles/django/defaults/main.yml
@@ -1,9 +1,13 @@
+django_repo       : ""
+python_version    : "3.4"
+
 django_root       : ""
 django_name       : ""
-django_repo       : ""
 django_branch     : "master"
 
-django_database   : "sqlite"
+django_database   :
+  engine          : "sqlite"
+
 django_debug      : true
 django_domain     : "{{ ansible_default_ipv4.address }}.xip.io"
 django_pull       : false
