--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -3,6 +3,6 @@ Pillow==3.1.1
 django-crispy-forms==1.6.0
 pip==8.1.0
 
-{% if django_database == 'postgres' %}
+{% if django_database.engine == 'postgres' %}
 psycopg2==2.6.1
 {% endif %}
