--- a/ansible/roles/django/tasks/dirs.yml
+++ b/ansible/roles/django/tasks/dirs.yml
@@ -6,9 +6,9 @@
 #
 
 - set_fact:
+    dir_etc   : "{{ django_root }}/etc"
     dir_var   : "{{ django_root }}/var"
     dir_run   : "{{ django_root }}/var/run"
-    dir_etc   : "{{ django_root }}/var/etc"
     dir_log   : "{{ django_root }}/var/log"
     dir_static: "{{ django_root }}/var/static"
     dir_media : "{{ django_root }}/var/media"
