Replace deprecated sudo by become

--- a/ansible/roles/django/tasks/monit.yml
+++ b/ansible/roles/django/tasks/monit.yml
@@ -6,7 +6,7 @@
 
 - name: "(sudo) Monit: mkdir /etc/monit.d"
   file: "path=/etc/monit.d state=directory"
-  sudo: true
+  become: true
   when: "django_with_sudo"
 
 - name: "Monit symlink"
@@ -15,5 +15,5 @@
     state: "link"
     src: "{{ dir_etc }}/monit.conf"
   notify: "restart monit"
-  sudo: true
+  become: true
   when: "django_with_sudo"
