--- a/ansible/roles/django/handlers/main.yml
+++ b/ansible/roles/django/handlers/main.yml
@@ -3,10 +3,10 @@
 
 - name: "reload nginx"
   service: "name=nginx state=reloaded"
-  sudo: true
+  become: true
   when: "django_with_sudo"
 
 - name: "restart monit"
   service: "name=monit state=restarted"
-  sudo: true
+  become: true
   when: "django_with_sudo"
