Move Ansible role to separate package

--- a/ansible/development.yml
+++ b/ansible/development.yml
@@ -7,7 +7,7 @@
   vars_files:
   - "vars.yml"
   roles:
-  - role              : "django"
+  - role              : "jdavid.django"
     django_debug      : true
     django_pull       : false
     django_with_nginx : false
