--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -1,7 +1,10 @@
-Django==1.9.7
 Pillow==3.3.0
-django-crispy-forms==1.6.0
 pip==8.1.2
+
+# Django
+Django==1.9.8
+django-crispy-forms==1.6.0
+django-sendfile==0.3.10
 
 {% if django_database.engine == 'postgres' %}
 psycopg2==2.6.2
