--- a/ansible/development.yml
+++ b/ansible/development.yml
@@ -14,7 +14,7 @@
     django_with_monit : false
     django_with_sudo  : false
 
-    django_domain     : "{{ ansible_default_ipv4.address }}.xip.io"
+#   django_domain     : ""
 #   django_root       : ""
 #   django_name       : ""
 
