--- a/ansible/staging.yml
+++ b/ansible/staging.yml
@@ -14,6 +14,8 @@
     django_with_monit : true
     django_with_sudo  : false
 
+    django_prefix     : ""
+
     #django_domain     : ""
     django_name       : "django-boot-staging"
     django_root       : "/tmp/django-boot-staging"
