--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -4,8 +4,8 @@ Pillow==4.3.0
 pip==9.0.1
 
 # Django
-Django==1.11.7
-django-crispy-forms==1.7.0
+Django==2.0
+#django-crispy-forms==1.7.0
 django-sendfile==0.3.11
 
 {% if django_database.engine == 'postgres' %}
