--- a/ansible/development.yml
+++ b/ansible/development.yml
@@ -21,6 +21,10 @@
 #   django_name       : ""
 
     django_database   :
-      engine          : "sqlite"
+      engine          : "postgres"
+      name            : "wsn"
+      user            : "wsn"
+      password        : "wsn"
+
 
     django_port       : 8000 # Used by uwsgi
