--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -1,12 +1,10 @@
 ipdb!=0.10.3
 ipython==6.2.1
-Pillow==4.3.0
 pip==9.0.1
 
 # Django
 Django==2.0
-#django-crispy-forms==1.7.0
-django-sendfile==0.3.11
+djangorestframework==3.7.7
 
 {% if django_database.engine == 'postgres' %}
 psycopg2==2.7.3.2
