--- a/ansible/dev_conda.yml
+++ b/ansible/dev_conda.yml
@@ -26,5 +26,7 @@
       user            : "wsn"
       password        : "wsn"
 
-
     django_port       : 8000 # Used by uwsgi
+
+    python_env        : "conda"
+    conda_channel     : "conda-forge"
