--- a/ansible/production.yml
+++ b/ansible/production.yml
@@ -23,6 +23,7 @@
     django_http       : false
     django_https      : true
     django_hsts       : 0
+    nginx_timeout     : "600s"
     certbot_email     : ""
 
     django_database   :
